cmake_minimum_required(VERSION 3.24)
project(my_stl)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_CXX_STANDARD 23)

add_subdirectory(my_std)
file(GLOB ALL_SRC_FILES ${PROJECT_SOURCE_DIR}/*.cpp)
foreach (SRC_FILE ${ALL_SRC_FILES})
    get_filename_component(EXE_NAME ${SRC_FILE} NAME_WE)
    add_executable(${EXE_NAME} ${SRC_FILE})
    target_link_libraries(${EXE_NAME} PUBLIC -fno-elide-constructors -g -Wall -fsanitize=address,leak -fno-omit-frame-pointer my_std)
endforeach ()